no tener logica en el controller y mejoraen el datainicialaizer